bugs fixed, added file location

--- a/PinterestPinsIdsReplacer/FrmPPReplacer.resx
+++ b/PinterestPinsIdsReplacer/FrmPPReplacer.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>146, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -889,6 +892,35 @@
         AAJJE/L/jNtS0kanW2wAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="BtnGenerateIDs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAVdSURBVFhH7VddTFtlGCZe+JP4E/XK6HSJmhj1zhv1ykTWf1oc4KV66bzURMw2TdmgLaeHtuAW
+        HZsXzJjIsthJJziXaByjPee0uC38lDlgECYzDKHMtiCjHN/n9Dtdfw5jrC0jxid5c06/9+f7+n7v36n4
+        H1kwuYVWvSskg0y84GPLWwc2b/ik9+cZ2UNk9UUCbPnuQ9fU97K1RWo3u8Vkeygmg/CONb1LeomJbQ7s
+        dvmeStfZp/H+hv2X+y28+JXVIyUaAlMrX/fH5e5Lqwrh3U5r4FW1iEeMbd33QQe6sIH3ssDAhd4zuISU
+        lQ+frOJF4YOjI0l/9IbcPUoH0yDwdh0dSVhJFjrQhQ1mrrQgjz1o5sW5Q8GY7Oi5mvr4+OUlxWN0kAO9
+        f8nvHBpYMHLCMgjvB2lNOSjJQBY60IUN2GJmSwedI/iCxS3N1B8fXwr8vpLx0u7vJhcp5mb0TqHG2nz2
+        IZCuOVht4aWp3f6JJVUOOtCFDdhiZksLs7P3UdrgouvUdMZzyuE8wceYSAaQJW9dUz0JHehinYmUB5Sd
+        VzoilBC0Ka4SnmOsAhicwbp32wcWIAsdSpopxiofDBRjXSPpKza5xWVcKWMVwGgXHjZx4j+QhQ50Gat8
+        2MgBK12RRzb9gPlXjIRgrAJQ23t7U684P0mQAMhWrcB/0yE+bubE2YO9c4ps0UliyWr2IEtew1+zzFAp
+        QbYiIRBzIHgOh9tzYrJ0ZaamNRLoDM/Il2Or8rf03OkNdzGWglsVangSV4mYBOFd9VzJCvVOb+T8qeGY
+        csAf6VnjC59jrAyyWx3a166OaOLWrW5Zfr8jmiyq1ekapW1mXvjMwomLwkRCOSCe+G12C58am4WnmGjO
+        sIABoIqXDmMgwGCw1rCAqea2hgWdU3jF4AxtZz8r6jzBB0j5gLVFTDoC40vw2th8SjkgnviNdfCJPoc8
+        U6UCHNoOe3g3OoQXqZt8mT9uWTziF+ApCusB/4AOM00TyOJbHimgd4Yqqz3icP2xi8mBP5eVQ61Fg8T/
+        5NhIorpFHNY1CzugDzvkvauqZwAMqRhWQTZPbvyuC/pHez78JhofuXZDPnJmOlXbFkm0np5c1jrQWuQj
+        eegdPvNHCnY+InsmXtrLtsgd+bkNjPz6psgTVM2Xfh39O7PZ+Hzu5pGpRbnBfylJmRunmEvh2eAfTWI9
+        Wy5bD/ZgF/bZVncGTL42Cuba1kjidHQhZ0PQDwOxVZtHile5pX1Gru/ZOvvQvXhaOGE/1rsHY6v5OrAD
+        ezZKANhnWxUHHRe0UOxc95+bzWwUJg/hEOS1V5lYDgyOvtfA779y05P+87MyjfELepdoTkuVEHR1F3qG
+        5jOb4VrhOcbWBMVv474TY0lVB/qww9ilBX3kxJGV6mZKzNF1MrYm9M7gczW+SFzVgT7sMHZpgQQYnUvX
+        OpCRC60g5hhbEyglpLei6kDf2BxaYezSIt+D1M7W9eAOTni+hjyt6pTVg4UxOJpEtjK2JqooBvdvRgwi
+        65B9yEJ1M9Q5ZCmylYnlQOcKvl6QxVQFqPlfR1VISxUJpQ5SvVqrDqLO4RDIViQEYhJPeI70Et2DNz2u
+        UqYOUn0tug7eTifpJw+hlNRStiJx8MS1Yj1briydBEDPVHsxeil6qveniTvqxejlai9Gj2dbFIf8aQZT
+        CaYTTCnZWa1F4Nd3RtHWhtJTkNSlNc0UDa150MaLbRTwyaauMc15EOvgW3nJlx1rJr7vGXUeLDswMRtp
+        ctaaqE18aK+lMfgkE727wDcIvIYD9gwp3yS/MdbWABXfLnzN4YCdkvJV9z1jbQ0UfBdvZCr+b6Ki4l9y
+        ue427/sZPQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAU5JREFUWEft
@@ -1275,6 +1307,52 @@
   <metadata name="saveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>146, 17</value>
+  </metadata>
+  <data name="PicClearLinc.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAWdJREFUOE9j
+        GF4gpqpVMrKkYWFiUYssVIh8EFvSIBZWWPc+JK/qf1hB7bf40mZlqBTpILakmzu+qutIeGHdf5CBFBkK
+        MiyhtvsAEP+Pr+n6j25ocF6NKlQpYQA2rK77IMgwGCbb0BMnTvAl1vceRjYMp6GFtZ8YGBqYoFoxwcWL
+        F7nPX797cN/pCyeS6nr+EDI0tKDmR0NDAwtUOyqAGXb+xp3/IHzg9MVjQEN/4zS0uOFTVEWTMVQ7KkA3
+        jAhDb8VV90lDtaMCXIbBMBZDcRt25swzLqCmY+iGoOP9py4cSawHG4rbMBA4d/22JTYDsOGdx86sS2ro
+        lIJqxQ3O37zTis0ANHzjws2buF2GDi5cv92OxRAwvnDj9vVzN24Qdhk6AGruRDfs3PVbT7YfPpu2ce+x
+        UGx4074j2lDtmOD///+M527cyTt343bH0QtXDwHx8S2Hjk/asPdoB068/7gLVPugBwwMABzr4gfrg3Yf
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>146, 17</value>
+  </metadata>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAUeSURBVGhDzZpbbBtFFIYNj9yfuUiIru1K0FCgQAtICCEkEBKUFIknxEXwgAQCVTyBkBBPwFuh
+        0MIDpeUibhJCVbzrJr0J2qgobRLvOpc6aRMnbUibREns2EnqZDhn91jrnT129+Yov/QpiffMmd/emdkz
+        48QilxDXKKne2+Nt2c3JlPEogr/ja3iNotaPkn8N3BjXjB2Kmtkd1/TuuKqXAFGHEsaYsareevfR7A2U
+        Zu0FJrYlVP0HMFKsMeiXIuQ4AHdnK6VtvrAz6PQIYyYkRkdCyz5E3USvu9q7bla0zLfQ2Yq788jA3HuV
+        VO4m6jYabUhnHoDEQzUdNRVF1UciG1ZKKvsiJF2UO1kDyjBUXyAbwaSk9NchUUVKHIith/vF/pEpcWKq
+        IL7MTYp70gYbJ1GJa5nXyI4/wXh/3kzAJ/bFlo4+cbG8LGr13fnLbCxDBUcB2fKmhGo8CA0jGza7hybJ
+        tq1zxUU2tg5leBP3kb3GuvPP7lugwbCUIBQdk/Nk29ap6SIb24AcroRks75oqeQSBObn/DTZtvV+7xgb
+        2xBN/5ps8sKlCwIjX+efODYoLtAcWAX2DF9i4zywkmzTt5Bdt5rzhLVoOZQVL3UOi0eO9LPXfZAmu05h
+        bcMEr0vYkoMKM7ZBGPAT39kzJj4fmBBvnRkVSY2P80fme7JtCctauFBwBwbn6b/Pij/GZ8TyCo56W/vO
+        T7HxPik6SnGs55mgQOAnjJ+2bLyq/vky284vjjID/viKC/LLw1AudE4VySqvtolZtm0AdpF9vAPmTooL
+        8sw2MD9YKJNNIZbgDixUVugvW5/0XWTbB+C05f5jcS38sSBd9AVO1Fxh0TQ4XloWn8EQwvqn+lqtnjo+
+        yOYIQNHcY29I63cwF32BZcG/wNuwymzUrCoT35Q8DUYXllxtw5A42HNbLKEZ93IX/cCVxh/o42Tb1o+j
+        0664MGxsy2yCCZx9jLsYlvbJObJt682uETY2KHhk05Q3gHekJE1gnNRYTnDxQbHeQARDSOYN+KRl4U6M
+        iw2DOYSimMQyP8FYl/UprExcbBjMSRzFMiqTh9VG1rP/5NjYEFjLKCqKB1mVJ2Gdl/Uf7AXgac/Gh4Ae
+        ZCA6q+SCfPORcYFs2/p9bIaNDUlNKaHqrdLFwKgT7uXz3e48GxuGRCqznezHYi3p3uvhxdDlNFaiM0sV
+        sm2psrpqlhVcfAic5TQKxugBJtAXOFFl6bMlNjYcxj6ybYs29Eywdz403OVDRBsYB3huRbadgsl8mGvg
+        lV/zM2Tb1ns9zvH/DOzUfslPix0nhxyv+0Aju27hZhkCAh+r9M3Z+4Gqtp+wjL586pw4emnePFbBnwHL
+        ioqi9d5PdnlB0F6pkWfmlp0TGIUHusNFe1/wGyyp1ZLbL7jck836og3+gNz4amxuz5LF+vom+IEWkvP8
+        xQfeJmhQlhI0ZBMMiTr7eDELd+ad7lG2nUdKWHSSPW9S1Oxz0PCKlKghxy8XyLKtk1CFPn5sgI33CB7x
+        t5Itf4qrmVcpAZfYBT6wcMx3wvYSK1I8SuTifHAFlsxXyE4w4SMbEvkaThFRwlFANsIJv1yAhDmpg6ah
+        qMYgfrtP3UcjXAHiKX0PdNDMr1kruFTit//UbfTC83l4I4eYzsOiXfUhFaXwqa1o+n7oOEwVO48nzXVr
+        m7UQluJ40ApmvgAzZ+Bno+0p/l/FaWAXLg63Huy6jtKsI8E+FTfb+OCp/rtNUtVbrA141IrF/gd8skc9
+        6sl76QAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAgAgIAAAAEAIAAoCAEAhgAAAGBgAAABACAAqJQAAK4IAQBISAAAAQAgAIhUAABWnQEAQEAAAAEA
